--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,7 @@
-@import "tailwindcss";
-@import "./theme.css";
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #f5f5f5;
+  color: #333;
+}
