--- a/src/Styles/Horheader.module.css
+++ b/src/Styles/Horheader.module.css
@@ -1,4 +1,8 @@
 /* Header Component Styles */
+*{
+  text-decoration: none;
+  list-style-type: none;
+}
 .header {
   background-color: #f0effb;
   border-bottom: 1px solid #e5e7eb;
