--- a/src/Styles/Footer.module.css
+++ b/src/Styles/Footer.module.css
@@ -19,7 +19,7 @@ display: flex;
     display: flex;
     align-items: center;
     gap: 10px;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .footerBrand h2 {
