--- a/src/Styles/Footer.module.css
+++ b/src/Styles/Footer.module.css
@@ -77,16 +77,22 @@ display: flex;
   .footerTop {
     flex-direction: column;
     align-items: flex-start;
+    gap: 1px;
   }
 
   .footerLinks {
-    flex-direction: column;
-    gap: 30px;
+    /* flex-direction: column;
+    gap: 0px; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .footerBottom {
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
+  }
+  .footerBrand{
+    flex:auto;
   }
 }
