--- a/src/Styles/signup.module.css
+++ b/src/Styles/signup.module.css
@@ -608,7 +608,15 @@ border: 2px solid #2a2842;
     transform: rotate(360deg);
   }
 }
-
+.rightSide_1{
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    margin: auto;
+    width: 100%;
+    max-width: 600px;
+}
 
 
 /* Responsive */
