--- a/src/Styles/signup.module.css
+++ b/src/Styles/signup.module.css
@@ -522,8 +522,7 @@ j .title3 {
   font-size: 1rem;
   cursor: pointer;
   width: 237px;
-    height: 76px;
-
+  height: 76px;
 }
 
 .continueBtn {
@@ -552,30 +551,30 @@ j .title3 {
   max-width: 520px;
 }
 
-.label{
+.label {
   margin-bottom: 20px;
   font-size: 20px;
   color: white;
 }
-.inputGroup1{
+.inputGroup1 {
   display: flex;
   flex-direction: row;
   gap: 30px;
 }
 .container6 {
-border: 2px solid #2a2842;
-    border-radius: 16px;
-    padding: 40px 20px;
-    /* background-color: #0f0f1b; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    max-width: 453px;
-    margin: auto;
-    box-shadow: 0 0 0 2px #1e1d32;
-    width: 100%;
+  border: 2px solid #2a2842;
+  border-radius: 16px;
+  padding: 40px 20px;
+  /* background-color: #0f0f1b; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  max-width: 453px;
+  margin: auto;
+  box-shadow: 0 0 0 2px #1e1d32;
+  width: 100%;
 }
 
 .text {
@@ -602,23 +601,99 @@ border: 2px solid #2a2842;
   border-radius: 50%;
   animation: spin 0.6s linear infinite;
 }
+select option {
+  color: black;
+  background-color: white;
+}
+.stepBarContainer {
+  display: flex;
+  gap: 8px;
+  margin: 20px 0;
+  justify-content: center;
+  width: 100%;
+  max-width: 520px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.stepBar {
+  flex: 1;
+  height: 13px;
+  background-color: #3a3b5a; /* Inactive color */
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.activeStepBar {
+  background-color: #5d5fef; /* Active color (your purple gradient base) */
+}
+
+.container_props {
+  /* padding: 3rem 10rem; */
+  color: #fff;
+  border-radius: 12px;
+  margin: auto;
+  width: 100%;
+  gap: 1.5rem;
+  max-width: 520px;
+  display: flex;
+  flex-direction: column;
+}
+.formInstance {
+  /* padding: 3rem 10rem; */
+  color: #fff;
+  border-radius: 12px;
+  margin: auto;
+  width: 100%;
+  gap: 1.5rem;
+  max-width: 520px;
+  display: flex;
+  flex-direction: column;
+}
+.formSubtitle_X {
+  width: 612px;
+  margin: auto;
+  text-align: center;
+  color: white;
+}
+.formSubtitle_X a {
+  color: #607afe;
+}
+.extraClass6 {
+  border: 2px dashed #ffffff;
+  box-shadow: none;
+  margin-top: 30px;
+  background: #252534;
+}
+.buttonGroup1 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 500px;
+}
+.imag4{
+  width: 439px;
+  height: 499px;
+}
 @keyframes spin {
   to {
     transform: rotate(360deg);
   }
 }
-.rightSide_1{
+.rightSide_1 {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100vh;
-    margin: auto;
-    width: 100%;
-    max-width: 600px;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  margin: auto;
+  width: 100%;
+  max-width: 600px;
 }
 
-.ptag{
+.ptag {
   color: white;
 }
 @media (max-width: 480px) {
