--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@ body {
   background-color: #f5f5f5;
   color: #333;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+}
