--- a/src/Pages/HelpSupport/SupportHistory.module.css
+++ b/src/Pages/HelpSupport/SupportHistory.module.css
@@ -17,7 +17,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
 .panelTitle {
@@ -34,8 +33,8 @@
 }
 
 .caseItem {
-  background-color: #3a3d4a;
-  border: 1px solid #52525b;
+  background-color: #3a3d4a00;
+  border: 1px solid #ffffff;
   border-radius: 12px;
   padding: 20px;
   cursor: pointer;
@@ -49,7 +48,7 @@
 
 .selectedCase {
   border-color: #6366f1 !important;
-  background-color: #404350 !important;
+  background-color: #4043503e !important;
 }
 
 .caseHeader {
@@ -111,8 +110,8 @@
 }
 
 .chatHeader {
-  background-color: #4a4d5a;
-  border-radius: 16px 16px 0 0;
+  background-color:#313148;
+  border-radius: 8px 8px 0 0;
   padding: 20px 24px;
 }
 
@@ -121,11 +120,12 @@
   font-size: 18px;
   font-weight: 600;
   margin: 0;
+  text-align: center;
 }
 
 .chatContainer {
   flex: 1;
-  background-color: #4a4d5a;
+  background-color: #313148;
   padding: 24px;
   overflow-y: auto;
   display: flex;
@@ -158,18 +158,33 @@
 .messageCard {
   border-radius: 12px;
   padding: 16px 20px;
-  max-width: 80%;
+  max-width: 100%;
 }
 
 .adminMessage {
-  background-color: #3a3d4a;
+  background-color: #3a3d4a15;
   align-self: flex-start;
+  border: 1px solid #fff;
+}
+.messageContent{
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.messageContent1{
+  display: flex;
+  width: 100%;
+  flex-direction: row-reverse;
+  justify-content: space-between;
 }
 
 .userMessage {
-  background-color: #6366f1;
+  background-color: #6365f100;
   align-self: flex-end;
-  margin-left: auto;
+  border: 1px solid;
+  width: 400px;
+
 }
 
 .messageText {
@@ -181,17 +196,27 @@
 }
 
 .messageInput {
-  display: flex;
   gap: 12px;
-  background-color: #4a4d5a;
+  background-color: #313148;
   border-radius: 0 0 16px 16px;
   padding: 20px 24px;
+  
+}
+
+.messageInput1 {
+  display: flex;
+  gap: 12px;
+  background-color: #313148;
+  justify-content: space-between;
+  border: 1px solid #fff;
+
+  
 }
 
 .textInput {
   flex: 1;
-  background-color: #3a3d4a;
-  border: 1px solid #52525b;
+  background: none;
+  border:none;
   border-radius: 8px;
   padding: 12px 16px;
   color: #ffffff;
@@ -208,12 +233,12 @@
 }
 
 .sendButton {
-  background: linear-gradient(135deg, #f59e0b 0%, #f97316 100%);
   border: none;
   border-radius: 8px;
   padding: 12px 16px;
   cursor: pointer;
   transition: transform 0.2s ease;
+  background: none;
 }
 
 .sendButton:hover {
