--- a/src/Styles/signup.module.css
+++ b/src/Styles/signup.module.css
@@ -186,6 +186,13 @@
   flex-direction: column;
   gap: 1.5rem;
 }
+.form1 {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  max-width: 600px;
+      margin: auto;
+}
 
 .inputGroup {
   position: relative;
