--- a/src/Styles/header.module.css
+++ b/src/Styles/header.module.css
@@ -16,6 +16,24 @@
       width: 82%;
 
 }
+.header1 {
+  height: 80px;
+  background: #4659B9;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 32px;
+  position: fixed;
+  top: 0;
+  left: 280px;
+  right: 0;
+  z-index: 100;
+  border-bottom: 1px solid #4a5568;
+  border-radius: 16px;
+  margin-top: 30px;
+      width: 82%;
+
+}
 
 .searchSection {
   flex: 1;
@@ -49,6 +67,19 @@
     outline: none;
     transition: all 0.2s ease;
 }
+.searchInput1 {
+    width: 100%;
+    height: 44px;
+    background:#252534;
+    border: none;
+    border-radius: 12px;
+    padding: 0 16px 0 48px;
+    color: #e2e8f0;
+    font-size: 14px;
+    outline: none;
+    transition: all 0.2s ease;
+    border: 1px solid #fff;
+}
 
 .searchInput::placeholder {
   color: #a0aec0;
@@ -79,6 +110,10 @@
 
 .notificationIcon {
   color: #a0aec0;
+}
+.userIcon1,.notificationIcon1 {
+  stroke: #191926;
+  fill: #191926;
 }
 
 .notificationBadge {
