--- a/src/Styles/signup.module.css
+++ b/src/Styles/signup.module.css
@@ -191,7 +191,7 @@
   flex-direction: column;
   gap: 1.5rem;
   max-width: 600px;
-      margin: auto;
+  margin: auto;
 }
 
 .inputGroup {
@@ -407,7 +407,32 @@
   height: 76px;
   border-radius: 16.08px;
 }
-
+.btnproceed_on {
+  width: 237px;
+  background: linear-gradient(135deg, #617aff 0%, #3a4999 100%);
+  height: 56px;
+  border-radius: 16.08px;
+  margin-top: 30px;
+}
+.or {
+  text-align: center;
+  color: #fff;
+}
+.googleWrapper {
+  display: flex;
+  width: 100%;
+  background: #2d2e36;
+  border: 1px solid #313148;
+  border-radius: 5px;
+  padding: 15px 16px;
+  color: white;
+  font-size: 14px;
+  transition: border-color 0.2s;
+  box-shadow: 0 4px 8px rgb(255 255 255 / 40%), 0 0 2px rgb(255 255 255 / 25%);
+  align-items: center;
+  gap: 15px;
+  cursor: pointer;
+}
 .container1 {
   background-color: #0d0d1c00;
   padding: 40px 24px;
@@ -681,7 +706,7 @@ select option {
   flex-wrap: wrap;
   max-width: 500px;
 }
-.imag4{
+.imag4 {
   width: 439px;
   height: 499px;
 }
