--- a/src/Pages/Admin/Adminbrowseprops.module.css
+++ b/src/Pages/Admin/Adminbrowseprops.module.css
@@ -154,5 +154,9 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
+    
+  }
+  .dashboard{
+    margin-left: 0px;
   }
 }
