--- a/src/Styles/signup.module.css
+++ b/src/Styles/signup.module.css
@@ -291,7 +291,10 @@
   display: grid;
   grid-template-columns: 100px 1fr;
   gap: 1rem;
-  align-items: end;
+  align-items: center;
+}
+.selectWrapper select {
+  width: 30%;
 }
 
 .phoneCode {
@@ -762,13 +765,21 @@ select option {
   .progressBar {
     display: none;
   }
-  .formSubtitle_X{
+  .formSubtitle_X {
     width: auto;
     padding: 0 16px;
   }
-  .btnproceed{ width: 100%; height: 56px; }
-  .dashboardBtn{ width: 100%; height: 56px; }
-  .buttonGroup{ gap: 12px; }
+  .btnproceed {
+    width: 100%;
+    height: 56px;
+  }
+  .dashboardBtn {
+    width: 100%;
+    height: 56px;
+  }
+  .buttonGroup {
+    gap: 12px;
+  }
 }
 @media (max-width: 500px) {
   .reed {
